k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrmanager-svc
  namespace: hrmanager
  labels:
    app.kubernetes.io/name: hrmanager
    app.kubernetes.io/component: service
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hrmanager
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
